--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             if (snapshot.val() === true) {
                 // After payment is complete, redirect after 10 seconds
                 setTimeout(() => {
-                    window.location.href = 'https://santhoshbhavanpc.github.io/screen2/'; // Change this URL if needed
+                    window.location.href = 'indexing.html'; // Change this URL if needed
                 }, 10000);
             }
         });
