--- a/index.html
+++ b/index.html
@@ -5,39 +5,38 @@
     <style>
         body {
             display: flex;
-            flex-direction: column; /* Stack items vertically */
-            justify-content: center; /* Center vertically */
-            align-items: center;     /* Center horizontally */
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             margin: 0;
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
         }
     </style>
 </head>
 <body>
     <br><br><br>
-    <h1>Scan This QR Code to pay</h1>
+    <h1>Scan This QR Code to Pay</h1>
     <h2>Amount to be paid: Rs.<span id="amount">—</span></h2>
-    <img src="qr.png" alt="QR Code">
-
-    <script>
-        // Load amount dynamically from your json file
-        fetch('https://santhoshbhavanpc.github.io/screen1/amount.json?ts=' + Date.now())
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('amount').textContent = data.amount;
-            })
-            .catch(error => {
-                console.error('Error fetching amount:', error);
-                document.getElementById('amount').textContent = 'N/A';
-            });
-    </script>
+    <img src="qr.png" alt="QR Code" width="250">
 
     <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
     <script>
-        // Firebase config
-        const firebaseConfig = {
+        // ========= 1st Firebase for price fetching =========
+        const firebaseConfigPrice = {
+            apiKey: "AIzaSyBWocGhLMcWTHNgS8pW2Y-jV1r5s-2pd6M",
+            authDomain: "entry-gate-ddc57.firebaseapp.com",
+            databaseURL: "https://entry-gate-ddc57-default-rtdb.firebaseio.com/",
+            projectId: "entry-gate-ddc57",
+            storageBucket: "entry-gate-ddc57.appspot.com"
+        };
+
+        // ========= 2nd Firebase for payment status =========
+        const firebaseConfigPayment = {
             apiKey: "AIzaSyBWocGhLMcWTHNgS8pW2Y-jV1r5s-2pd6M",
             authDomain: "paymentmodule-ed365.firebaseapp.com",
             databaseURL: "https://paymentmodule-ed365-default-rtdb.firebaseio.com",
@@ -48,20 +47,41 @@
             measurementId: "G-BZRD8Q6FPP"
         };
 
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
+        // ====== Initialize both Firebase apps separately ======
+        const appPrice = firebase.initializeApp(firebaseConfigPrice, "priceApp");
+        const appPayment = firebase.initializeApp(firebaseConfigPayment, "paymentApp");
 
-        // Listen for payment status updates
-        database.ref('paymentStatus/paymentComplete').on('value', (snapshot) => {
+        const dbPrice = firebase.database(appPrice);
+        const dbPayment = firebase.database(appPayment);
+
+        // ====== Ask for vehicle number and fetch price ======
+        const vehicleNumber = prompt("Enter your Vehicle Number:");
+
+        function findPrice(snapshot) {
+            let found = false;
+            const data = snapshot.val();
+            for (let slot in data) {
+                for (let recordId in data[slot]) {
+                    let record = data[slot][recordId];
+                    if (record.vehicleNo && record.vehicleNo.toLowerCase() === vehicleNumber.toLowerCase()) {
+                        document.getElementById('amount').textContent = record.price;
+                        found = true;
+                        break;
+                    }
+                }
+                if (found) break;
+            }
+            if (!found) {
+                document.getElementById('amount').textContent = "Not found";
+            }
+        }
+        dbPrice.ref("slots").on("value", findPrice);
+
+        // ====== Listen for payment completion ======
+        dbPayment.ref('paymentStatus/paymentComplete').on('value', (snapshot) => {
             if (snapshot.val() === true) {
-                // Redirect immediately
                 window.location.href = 'indexing.html';
-
-                // Reset the payment status so it doesn't trigger again
-                database.ref('paymentStatus').set({
-                    paymentComplete: false
-                });
+                dbPayment.ref('paymentStatus').set({ paymentComplete: false });
             }
         });
     </script>
