--- a/indexing.html
+++ b/indexing.html
@@ -68,15 +68,17 @@
     <div class="loader"></div>
     <div class="message">Processing Payment...</div>
     <div class="instructions">
-        <p>💳 Please do not refresh the page while payment is processing.</p>
-        <p>🔒 Ensure you are on a secure connection (look for https:// in the address bar).</p>
-        <p>✅ Do not share your OTP or UPI PIN with anyone.</p>
+        <p>💳 Please do not do anything on this screen while payment is processing.</p>
+        <p>✅ Please check your vehicle properly(check is anything from your car missing,or any damage?)</p>
+        <p>📞 If your payment is failed Contact our support staff</p>
     </div>
 </div>
 
 <div id="complete" class="complete">
-    <h2>✅ Payment Complete</h2>
-    <p>You can go out.<br>Thankyou for using this parking system.</p>
+    <h2>Payment Successful</h2>
+    <p>Thank you for using the Fun Mall Smart Parking System. <br>
+        Your payment was successful, and you may now exit the parking area. <br>
+        We wish you a pleasant and safe journey ahead.</p>
 </div>
 
 <script>
